--- a/src/Components/NavBar/NavBar.scss
+++ b/src/Components/NavBar/NavBar.scss
@@ -8,6 +8,7 @@
     transition: width .5s, height .5s;
     border-right: 1px solid white;
     overflow-y: auto;
+    z-index: 10;
 
     #navbar-open {
         display: flex;
